# mkdocs-material-extends

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
mkdocs_material_extends/: __init__.py
mkdocs_material_extends/javascripts/: main.min.js
mkdocs_material_extends/theme/: main.html  main.js  styles.css
mkdocs_material_extends/theme/partials/: libs.html
requirements/: requirements.in  requirements.txt
